resources/ATLZoo/VisualRepCodeClone/CloneDr/Syntax/CloneDr_ANTLR3.g
grammar CloneDr_ANTLR3;@header {package org.atl.engine.injectors.ebnf;}@lexer::header {package org.atl.engine.injectors.ebnf;}@lexer::members {

	private void newline() {}

	public org.atl.engine.injectors.ebnf.EBNFInjector2 ei = null;

	public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
		ei.reportError((Exception)e);
	}

	public Token emit() {
		org.atl.engine.injectors.ebnf.LocationTokenv3 ret = null;

		ret = new org.atl.engine.injectors.ebnf.LocationTokenv3(input, type, channel, tokenStartCharIndex, getCharIndex()-1);
		ret.setLine(tokenStartLine);
		ret.setText(text);
	  	ret.setCharPositionInLine(tokenStartCharPositionInLine);
		ret.setEndLine(getLine());
		ret.setEndColumn(getCharPositionInLine());
		emit(ret);

		return ret;
	}

} @members {
 public org.atl.engine.injectors.ebnf.EBNFInjector2 ei = null;
 
//	public void reportError(RecognitionException ex) {
//		ei.reportError((Exception)ex);
//	}
	
//	public void emitErrorMessage(String s) {
//		ei.reportError(s);
//	}

	public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
		ei.reportError((Exception)e);
	}

	//TODO: what about warnings?
//	public void reportWarning(String s) {
//		ei.reportWarning(s);
//	}
	
 public static void main(String[] args) throws Exception {
						CharStream input = new ANTLRFileStream(args[0]);
 CloneDr_ANTLR3Lexer lex = new 
 CloneDr_ANTLR3Lexer(input);
						CommonTokenStream tokens = new CommonTokenStream(lex);
						tokens.discardTokenType(WS);
						tokens.discardTokenType(COMMENT);
						tokens.discardTokenType(NL);
						
 CloneDr_ANTLR3Parser parser = new 
 CloneDr_ANTLR3Parser(tokens);
						parser.main();
					}
}

main returns[Object ret2] @init {}
	:	((ret=cloneDr) EOF)
  {
   ret2=ret;
  }

	;

identifier returns[Object ret2] @init {java.lang.Object ret=null;}
	:	ast=NAME {ret = ast.getText(); ei.setToken((Object)ast);}
  {
   ret2=ret;
  }

	;

stringSymbol returns[Object ret2] @init {java.lang.Object ret=null;}
	:	ast=STRING {ret = ast.getText(); ei.setToken((Object)ast);}
  {
   ret2=ret;
  }

	;

integerSymbol returns[Object ret2] @init {java.lang.Object ret=null;}
	:	ast=INT {ret = Integer.valueOf(ast.getText()); ei.setToken((Object)ast);}
  {
   ret2=ret;
  }

	;

floatSymbol returns[Object ret2] @init {java.lang.Object ret=null;}
	:	ast=FLOAT {ret = Double.valueOf(ast.getText()); ei.setToken((Object)ast);}
  {
   ret2=ret;
  }

	;

cloneDr returns[Object ret2] @init {Object ret=(backtracking==0) ? ei.create("CloneDr", false, false) : null;org.antlr.runtime.Token firstToken=input.LT(1);}
	:	(((((temp=cDGroup {ei.set(ret, "groups", temp);} ((temp=cDGroup {ei.set(ret, "groups", temp);}))*))?)))
  {
   ei.leaveContext(false);
   if(input.LT(-1) != null) ei.setLocation(ret, firstToken.getLine() + ":" + (firstToken.getCharPositionInLine() + 1) + "-" + ((org.atl.engine.injectors.ebnf.LocationTokenv3)input.LT(-1)).getEndLine() + ":" + (((org.atl.engine.injectors.ebnf.LocationTokenv3)input.LT(-1)).getEndColumn() + 1));ei.setCommentsBefore(ret, new Object[] {input, firstToken});
	   ei.setCommentsAfter(ret, new Object[] {input, input.LT(-1)});
   ret2=ret;
  }

	;

cDGroup returns[Object ret2] @init {Object ret=(backtracking==0) ? ei.create("CDGroup", false, false) : null;org.antlr.runtime.Token firstToken=input.LT(1);}
	:	(temp=cDHead {ei.set(ret, "head", temp);} ((temp=cDUnit {ei.set(ret, "units", temp);} ((temp=cDUnit {ei.set(ret, "units", temp);}))*)) ((temp=cDVarible {ei.set(ret, "varibles", temp);} ((temp=cDVarible {ei.set(ret, "varibles", temp);}))*))?)
  {
   ei.leaveContext(false);
   if(input.LT(-1) != null) ei.setLocation(ret, firstToken.getLine() + ":" + (firstToken.getCharPositionInLine() + 1) + "-" + ((org.atl.engine.injectors.ebnf.LocationTokenv3)input.LT(-1)).getEndLine() + ":" + (((org.atl.engine.injectors.ebnf.LocationTokenv3)input.LT(-1)).getEndColumn() + 1));ei.setCommentsBefore(ret, new Object[] {input, firstToken});
	   ei.setCommentsAfter(ret, new Object[] {input, input.LT(-1)});
   ret2=ret;
  }

	;

cDHead returns[Object ret2] @init {Object ret=(backtracking==0) ? ei.create("CDHead", false, false) : null;org.antlr.runtime.Token firstToken=input.LT(1);}
	:	('#1' '	' temp=identifier {ei.set(ret, "tid", temp);} '	+' temp=identifier {ei.set(ret, "tno", temp);} '	' temp=identifier {ei.set(ret, "tname", temp);} '	' temp=identifier {ei.set(ret, "sim", temp);} '	' temp=identifier {ei.set(ret, "pcount", temp);} '	' temp=identifier {ei.set(ret, "nclones", temp);} '	' temp=identifier {ei.set(ret, "esloc", temp);})
  {
   ei.leaveContext(false);
   if(input.LT(-1) != null) ei.setLocation(ret, firstToken.getLine() + ":" + (firstToken.getCharPositionInLine() + 1) + "-" + ((org.atl.engine.injectors.ebnf.LocationTokenv3)input.LT(-1)).getEndLine() + ":" + (((org.atl.engine.injectors.ebnf.LocationTokenv3)input.LT(-1)).getEndColumn() + 1));ei.setCommentsBefore(ret, new Object[] {input, firstToken});
	   ei.setCommentsAfter(ret, new Object[] {input, input.LT(-1)});
   ret2=ret;
  }

	;

cDUnit returns[Object ret2] @init {Object ret=(backtracking==0) ? ei.create("CDUnit", false, false) : null;org.antlr.runtime.Token firstToken=input.LT(1);}
	:	('#2' '	' temp=identifier {ei.set(ret, "tid", temp);} '	' temp=identifier {ei.set(ret, "rno", temp);} '	' temp=identifier {ei.set(ret, "startLine", temp);} '	' temp=identifier {ei.set(ret, "startC", temp);} '	' temp=identifier {ei.set(ret, "endLine", temp);} '	' temp=identifier {ei.set(ret, "endC", temp);} '	' temp=identifier {ei.set(ret, "fileName", temp);})
  {
   ei.leaveContext(false);
   if(input.LT(-1) != null) ei.setLocation(ret, firstToken.getLine() + ":" + (firstToken.getCharPositionInLine() + 1) + "-" + ((org.atl.engine.injectors.ebnf.LocationTokenv3)input.LT(-1)).getEndLine() + ":" + (((org.atl.engine.injectors.ebnf.LocationTokenv3)input.LT(-1)).getEndColumn() + 1));ei.setCommentsBefore(ret, new Object[] {input, firstToken});
	   ei.setCommentsAfter(ret, new Object[] {input, input.LT(-1)});
   ret2=ret;
  }

	;

cDVarible returns[Object ret2] @init {Object ret=(backtracking==0) ? ei.create("CDVarible", false, false) : null;org.antlr.runtime.Token firstToken=input.LT(1);}
	:	('#3' '	' temp=identifier {ei.set(ret, "tid", temp);} '	' temp=identifier {ei.set(ret, "cid", temp);} '	' temp=identifier {ei.set(ret, "pno", temp);} '	' temp=identifier {ei.set(ret, "ai", temp);} '	' temp=identifier {ei.set(ret, "sl", temp);} '	' temp=identifier {ei.set(ret, "sc", temp);} '	' temp=identifier {ei.set(ret, "el", temp);} '	' temp=identifier {ei.set(ret, "ec", temp);} '	' temp=identifier {ei.set(ret, "fileName", temp);})
  {
   ei.leaveContext(false);
   if(input.LT(-1) != null) ei.setLocation(ret, firstToken.getLine() + ":" + (firstToken.getCharPositionInLine() + 1) + "-" + ((org.atl.engine.injectors.ebnf.LocationTokenv3)input.LT(-1)).getEndLine() + ":" + (((org.atl.engine.injectors.ebnf.LocationTokenv3)input.LT(-1)).getEndColumn() + 1));ei.setCommentsBefore(ret, new Object[] {input, firstToken});
	   ei.setCommentsAfter(ret, new Object[] {input, input.LT(-1)});
   ret2=ret;
  }

	;

	
// testLiterals = false;

NL
	:	(	'\r' '\n'
		|	'\n' '\r'	//Improbable
		|	'\r'
		|	'\n'
		)
	{newline();}
	;

WS
	:	(	' '
		|	'\t'
		)
	;

fragment
DIGIT
	:	'0'..'9'
	;

fragment
ALPHA
	:	'a'..'z'
	|	'A'..'Z'
	|	'_'
	//For Unicode compatibility (from 0000 to 00ff)
	|	'\u00C0' .. '\u00D6'
	|	'\u00D8' .. '\u00F6'
	|	'\u00F8' .. '\u00FF'
	;

fragment
SNAME
//	options {
//		testLiterals = true;
//	}
	:	(ALPHA | DIGIT | ' ' | '.' | ':' | '\\' | '-' | '/' )*
;

NAME
	:	(
			SNAME
//			s:SNAME {if(s.getType() != SNAME) $setType(s.getType());}
		|	'"'!
			(	ESC
			|	'\n' {newline();}
			|	~('\\'|'\"'|'\n')
			)*
			'"'!
			{setText(ei.unescapeString(getText(), 1));}
		)
	;

INT
	:	(DIGIT)+
//		(('.' DIGIT)=> '.' (DIGIT)+ {$setType(FLOAT);})?
	;

	FLOAT	:	DIGIT+ '.' DIGIT*	;

fragment
ESC
	:	'\\'!
		(	'n' //{setText("\n");}
		|	'r' //{setText("\r");}
		|	't' //{setText("\t");}
		|	'b' //{setText("\b");}
		|	'f' //{setText("\f");}
		|	'"' //{setText("\"");}
		|	'\'' //{setText("\'");}
		|	'\\' //{setText("\\");}
		|	(
				('0'..'3')
				(
//					options {
//						warnWhenFollowAmbig = false;
//					}
				:	('0'..'7')
					(
//						options {
//							warnWhenFollowAmbig = false;
//						}
					:	'0'..'7'
					)?
				)?
			|	('4'..'7')
				(
//					options {
//						warnWhenFollowAmbig = false;
//					}
				:	('0'..'7')
				)?
			)
				{
//					String s = getText();
//					int i;
//					int ret = 0;
//					String ans;
//					for (i=0; i<s.length(); ++i)
//						ret = ret*8 + s.charAt(i) - '0';
//					ans = String.valueOf((char) ret);
//					setText(ans);
				}
		)
	;

STRING
	:	'\''!
		(	ESC
		|	'\n' {newline();}
		|	~('\\'|'\''|'\n')
		)*
		'\''!
			{setText(ei.unescapeString(getText(), 1));}
	;

	

LSQUARE @init {}
	:	'['
  {
   
  }

	;

RSQUARE @init {}
	:	']'
  {
   
  }

	;

EXCL @init {}
	:	'!'
  {
   
  }

	;

COMA @init {}
	:	','
  {
   
  }

	;

LPAREN @init {}
	:	'('
  {
   
  }

	;

RPAREN @init {}
	:	')'
  {
   
  }

	;

LCURLY @init {}
	:	'{'
  {
   
  }

	;

RCURLY @init {}
	:	'}'
  {
   
  }

	;

SEMI @init {}
	:	';'
  {
   
  }

	;

COLON @init {}
	:	':'
  {
   
  }

	;

PIPE @init {}
	:	'|'
  {
   
  }

	;

SHARP @init {}
	:	'#'
  {
   
  }

	;

QMARK @init {}
	:	'?'
  {
   
  }

	;

COLONCOLON @init {}
	:	'::'
  {
   
  }

	;

POINT @init {}
	:	'.'
  {
   
  }

	;

RARROW @init {}
	:	'->'
  {
   
  }

	;

MINUS @init {}
	:	'-'
  {
   
  }

	;

STAR @init {}
	:	'*'
  {
   
  }

	;

SLASH @init {}
	:	'/'
  {
   
  }

	;

PLUS @init {}
	:	'+'
  {
   
  }

	;

EQ @init {}
	:	'='
  {
   
  }

	;

GT @init {}
	:	'>'
  {
   
  }

	;

LT @init {}
	:	'<'
  {
   
  }

	;

GE @init {}
	:	'>='
  {
   
  }

	;

LE @init {}
	:	'<='
  {
   
  }

	;

NE @init {}
	:	'<>'
  {
   
  }

	;

LARROW @init {}
	:	'<-'
  {
   
  }

	;

COMMENT @init {}
	:	(('--' (~('\r'| '\n'))*))
  {
   
  }

	;
